Java migration completed - upgraded Java version, dependencies, and code quality